--- a/2025-04-03-lesson05.org
+++ b/2025-04-03-lesson05.org
@@ -26,8 +26,9 @@ Certainly! Here are 20 tongue twisters covering the pronunciation of
 
 * Warming up - Tongue Twisters (15 minutes)
 
-The tongue twisters below are tailored to practice specific sounds,
-fostering improved pronunciation and fluency.
+The tongue twisters below are tailored to practice =/æ/=, =/ŋ/=,
+=/ɹ/=, =/ð/=, and =/θ/= sounds, fostering improved pronunciation and
+fluency.
 
 1. "Dan can fan a tan man with a pan."
 2. "Jack stacked black cans in a rack."
